polycollection alias name to prevent any future clashes

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,4 +3,4 @@ services:
     infinite.polycollection_type:
         class: Infinite\PolyCollectionBundle\Form\Type\PolyCollectionType
         tags:
-          - { name: form.type, alias: polycollection }
+          - { name: form.type, alias: InfinitePolyCollection }
